page categorie en cours

--- a/html/encyclopedie/categories.html
+++ b/html/encyclopedie/categories.html
@@ -100,10 +100,269 @@
             <section class="section-principal">
                 <div class="section-titre">
                     <a href="../encyclopedie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
-                    <h2 class="titre-section">POIDS & CATÉGORIES</h2>
+                    <h2 class="titre-section">CATÉGORIES D'ÂGES & POIDS</h2>
                 </div>
-                <div class="section-categorie">
-                    
+                <div class="tableau-categorie">
+                    <p class="texte-categorie">
+                        Afin d'assurer des chances équivalentes aux combattants, les judokas sont répartis dans les compétitions selon des catégories d'âge et des catégories de poids.
+                    </p>
+                    <article class="article-cat categorie-age">
+                        <h3 class="titre-tableau">Catégories d'âges pour la saison 2020 (du 01/01/20 au 31/12/20)</h3>
+                        <div class="divTable cat-age">
+                            <div class="divTableHeading">
+                                <div class="divTableRow">
+                                    <div class="divTableHead">CATÉGORIES</div>
+                                    <div class="divTableHead">ANNÉE DE NAISSANCE</div>
+                                    <div class="divTableHead">ÂGE</div>
+                                </div>
+                            </div>
+                            <div class="divTableBody">
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Éveils judo</div>
+                                    <div class="divTableCell">2014 - 2015 - 2016</div>
+                                    <div class="divTableCell">4 - 5 - 6 ans</div>
+                                </div>
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Mini-Poussin(e)s</div>
+                                    <div class="divTableCell">2012 - 2013</div>
+                                    <div class="divTableCell">7 - 8 ans</div>
+                                </div>
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Poussin(e)s</div>
+                                    <div class="divTableCell">2010 - 2011</div>
+                                    <div class="divTableCell">9 - 10 ans</div>
+                                </div>
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Benjamin(e)s</div>
+                                    <div class="divTableCell">2008 - 2009</div>
+                                    <div class="divTableCell">11 - 12 ans</div>
+                                </div>
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Minimes</div>
+                                    <div class="divTableCell">2006 - 2007</div>
+                                    <div class="divTableCell">13 - 14 ans</div>
+                                </div>
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Cadet(te)s</div>
+                                    <div class="divTableCell">2003 - 2004 - 2005</div>
+                                    <div class="divTableCell">15 - 16 - 17 ans</div>
+                                </div>
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Juniors</div>
+                                    <div class="divTableCell">2000 - 2001 - 2002</div>
+                                    <div class="divTableCell">18 - 19 - 20 ans</div>
+                                </div>
+                                <div class="divTableRow">
+                                    <div class="divTableCell">Seniors</div>
+                                    <div class="divTableCell">1999 et avant</div>
+                                    <div class="divTableCell">21 ans et +</div>
+                                </div>
+                            </div>
+                            </div>
+                            <p class="texte-categorie">
+                                A partir de la saison 2014-2015, la catégorie d'âge n'est pas déterminée en début de saison sportive, mais est calculée au 1er janvier de chaque année. Un(e) judoka né(e) en 1994 sera Junior jusqu'au 31 décembre 2014 et Sénior à partir du 1er janvier 2015.
+                            </p>
+                            <p class="texte-categorie">
+                                Les catégories d'âge sont identiques pour les masculins et pour les féminines.
+                            </p>
+                            <p class="texte-categorie">
+                                Pour les tournois "Grand Master" (30 ans et +), les judokas sont répartis dans des catégories d'âge par tranche de 5 ans.
+                            </p>
+                            <p class="texte-categorie">
+                                Pour les tests d'efficacité en combat (passage de grade pour la ceinture noire), les catégories d'âge sont : cadets, juniors, séniors et vétérans (+ de 40 ans).
+                            </p>
+                    </article>
+                    <article class="article-cat categorie-poids">
+                        <h3 class="titre-tableau">Catégories de poids</h3>
+                        <div class="tableaux-poids">
+                            <h4 class="tableau-sexe">Masculins</h4>
+                            <div class="divTable cat-poids">
+                                <div class="divTableHeading">
+                                    <div class="divTableRow">
+                                        <div class="divTableHead">Poussins</div>
+                                        <div class="divTableHead">Benjamins</div>
+                                        <div class="divTableHead">Minimes</div>
+                                        <div class="divTableHead">Cadets</div>
+                                        <div class="divTableHead">Juniors</div>
+                                        <div class="divTableHead">Seniors</div>
+                                    </div>
+                                </div>
+                                <div class="divTableBody">
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 30 kg</div>
+                                        <div class="divTableCell">- 34 kg</div>
+                                        <div class="divTableCell">- 46 kg</div>
+                                        <div class="divTableCell">- 55 kg</div>
+                                        <div class="divTableCell">- 60 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 34 kg</div>
+                                        <div class="divTableCell">- 38 kg</div>
+                                        <div class="divTableCell">- 50 kg</div>
+                                        <div class="divTableCell">- 60 kg</div>
+                                        <div class="divTableCell">- 66 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide texte-table">
+                                            Pour les poussins et avant, les judokas sont répartis par groupes morphologiques
+                                        </div>
+                                        <div class="divTableCell">- 38 kg</div>
+                                        <div class="divTableCell">- 42 kg</div>
+                                        <div class="divTableCell">- 55 kg</div>
+                                        <div class="divTableCell">- 66 kg</div>
+                                        <div class="divTableCell">- 73 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 42 kg</div>
+                                        <div class="divTableCell">- 46 kg</div>
+                                        <div class="divTableCell">- 60 kg</div>
+                                        <div class="divTableCell">- 73 kg</div>
+                                        <div class="divTableCell">- 81 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 46 kg</div>
+                                        <div class="divTableCell">- 50 kg</div>
+                                        <div class="divTableCell">- 66 kg</div>
+                                        <div class="divTableCell">- 81 kg</div>
+                                        <div class="divTableCell">- 90 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 50 kg</div>
+                                        <div class="divTableCell">- 55 kg</div>
+                                        <div class="divTableCell">- 73 kg</div>
+                                        <div class="divTableCell">- 90 kg</div>
+                                        <div class="divTableCell">- 100 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 55 kg</div>
+                                        <div class="divTableCell">- 60 kg</div>
+                                        <div class="divTableCell">- 81 kg</div>
+                                        <div class="divTableCell">- 100 kg</div>
+                                        <div class="divTableCell">+ 100 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 60 kg</div>
+                                        <div class="divTableCell">- 66 kg</div>
+                                        <div class="divTableCell">- 90 kg</div>
+                                        <div class="divTableCell">+ 100 kg</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 66 kg</div>
+                                        <div class="divTableCell">- 73 kg</div>
+                                        <div class="divTableCell">+ 90 kg</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide vide-bas"></div>
+                                        <div class="divTableCell">+ 66 kg</div>
+                                        <div class="divTableCell">+ 73 kg</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <h4 class="tableau-sexe">Féminimes</h4>
+                            <div class="divTable cat-poids">
+                                <div class="divTableHeading">
+                                    <div class="divTableRow">
+                                        <div class="divTableHead">Poussines</div>
+                                        <div class="divTableHead">Benjamines</div>
+                                        <div class="divTableHead">Minimes</div>
+                                        <div class="divTableHead">Cadettes</div>
+                                        <div class="divTableHead">Juniors</div>
+                                        <div class="divTableHead">Seniors</div>
+                                    </div>
+                                </div>
+                                <div class="divTableBody">
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 32 kg</div>
+                                        <div class="divTableCell">- 36 kg</div>
+                                        <div class="divTableCell">- 40 kg</div>
+                                        <div class="divTableCell">- 44 kg</div>
+                                        <div class="divTableCell">- 48 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 36 kg</div>
+                                        <div class="divTableCell">- 40 kg</div>
+                                        <div class="divTableCell">- 44 kg</div>
+                                        <div class="divTableCell">- 48 kg</div>
+                                        <div class="divTableCell">- 52 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide texte-table">
+                                            Pour les poussines et avant, les judokas sont répartis par groupes morphologiques
+                                        </div>
+                                        <div class="divTableCell">- 40 kg</div>
+                                        <div class="divTableCell">- 44 kg</div>
+                                        <div class="divTableCell">- 48 kg</div>
+                                        <div class="divTableCell">- 52 kg</div>
+                                        <div class="divTableCell">- 57 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 44 kg</div>
+                                        <div class="divTableCell">- 48 kg</div>
+                                        <div class="divTableCell">- 52 kg</div>
+                                        <div class="divTableCell">- 57 kg</div>
+                                        <div class="divTableCell">- 63 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 48 kg</div>
+                                        <div class="divTableCell">- 52 kg</div>
+                                        <div class="divTableCell">- 57 kg</div>
+                                        <div class="divTableCell">- 63 kg</div>
+                                        <div class="divTableCell">- 70 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 52 kg</div>
+                                        <div class="divTableCell">- 57 kg</div>
+                                        <div class="divTableCell">- 63 kg</div>
+                                        <div class="divTableCell">- 70 kg</div>
+                                        <div class="divTableCell">- 78 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 57 kg</div>
+                                        <div class="divTableCell">- 63 kg</div>
+                                        <div class="divTableCell">- 70 kg</div>
+                                        <div class="divTableCell">- 78 kg</div>
+                                        <div class="divTableCell">+ 78 kg</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide"></div>
+                                        <div class="divTableCell">- 63 kg</div>
+                                        <div class="divTableCell">- 70 kg</div>
+                                        <div class="divTableCell">+ 70 kg</div>
+                                        <div class="divTableCell">+ 78 kg</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                    </div>
+                                    <div class="divTableRow">
+                                        <div class="divTableCell tableau-vide vide-bas"></div>
+                                        <div class="divTableCell">+ 63 kg</div>
+                                        <div class="divTableCell">+ 70 kg</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                        <div class="divTableCell">&nbsp;</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
                 </div>
             </section>
         </div>
