page categorie en cours

--- a/html/encyclopedie/categories.html
+++ b/html/encyclopedie/categories.html
@@ -179,12 +179,12 @@
                             <div class="divTable cat-poids">
                                 <div class="divTableHeading">
                                     <div class="divTableRow">
-                                        <div class="divTableHead">Poussins</div>
-                                        <div class="divTableHead">Benjamins</div>
-                                        <div class="divTableHead">Minimes</div>
-                                        <div class="divTableHead">Cadets</div>
-                                        <div class="divTableHead">Juniors</div>
-                                        <div class="divTableHead">Seniors</div>
+                                        <div class="divTableHead">POUSSINS</div>
+                                        <div class="divTableHead">BENJAMINS</div>
+                                        <div class="divTableHead">MINIMES</div>
+                                        <div class="divTableHead">CADETS</div>
+                                        <div class="divTableHead">JUNIORS</div>
+                                        <div class="divTableHead">SENIORS</div>
                                     </div>
                                 </div>
                                 <div class="divTableBody">
@@ -276,12 +276,12 @@
                             <div class="divTable cat-poids">
                                 <div class="divTableHeading">
                                     <div class="divTableRow">
-                                        <div class="divTableHead">Poussines</div>
-                                        <div class="divTableHead">Benjamines</div>
-                                        <div class="divTableHead">Minimes</div>
-                                        <div class="divTableHead">Cadettes</div>
-                                        <div class="divTableHead">Juniors</div>
-                                        <div class="divTableHead">Seniors</div>
+                                        <div class="divTableHead">POUSSINES</div>
+                                        <div class="divTableHead">BENJAMINES</div>
+                                        <div class="divTableHead">MINIMES</div>
+                                        <div class="divTableHead">CADETTES</div>
+                                        <div class="divTableHead">JUNIORS</div>
+                                        <div class="divTableHead">SENIORS</div>
                                     </div>
                                 </div>
                                 <div class="divTableBody">
