animations + mise en page desktop ok

--- a/html/actualites.html
+++ b/html/actualites.html
@@ -96,7 +96,7 @@
         </nav>
     </header>
     <main>
-        <div class="pricipal-content">
+        <div class="principal-content">
             <section class="section-principal">
                 <h2 class="titre-section">ACTUALITÉS DU JUDO-CLUB</h2>
                 <div class="actu-club">
