--- a/html/results/results.html
+++ b/html/results/results.html
@@ -104,10 +104,10 @@
                 </div>
                 <div class="classement">
                     <nav class="tag-nav">
-                        <span class="m-poussins">Mini-Poussins</span>
-                        <span class="m-poussines">Mini-Poussines</span>
-                        <span class="poussins">Poussins</span>
-                        <span class="poussines">Poussines</span>
+                        <span class="nav-tableau">Mini-Poussins</span>
+                        <span class="nav-tableau">Mini-Poussines</span>
+                        <span class="nav-tableau">Poussins</span>
+                        <span class="nav-tableau">Poussines</span>
                     </nav>
                     <div class="table-m-poussins tableau">
                         <h3 class="titre-tableau">Classement Mini-Poussins</h3>
