design desktop definitif

--- a/html/encyclopedie/histoire-club.html
+++ b/html/encyclopedie/histoire-club.html
@@ -104,7 +104,7 @@
                 </div>
                 <article class="article-histoire">
                     <div class="titre-article">
-                        <img src="../../assets/img/encyclopedie/h-judo/Judo-caligraphie.svg" alt="Judo écrit en Japonais" class="image-titre">
+                        <img src="../../assets/img/encyclopedie/h-club/fene-logo-mini.png" alt="Judo écrit en Japonais" class="image-titre">
                         <h3 class="titre-histoire">JCF : JUDO-CLUB FÉNÉTRANGE</h3>
                     </div>
                     <div class="texte-histoire">
