--- a/html/gallerie.html
+++ b/html/gallerie.html
@@ -16,8 +16,7 @@
 <body>
     <header>
         <div class="cadre-titre">
-            <img src="../assets/img/accueil/Judo-caligraphie-red.svg" alt="logo du judo-club de Fénétrange"
-                class="logo-jcf">
+            <img src="../assets/img/accueil/Judo-caligraphie-red.svg" alt="logo du judo-club de Fénétrange" class="logo-jcf">
             <h1 class="titre">JUDO CLUB<br>FENETRANGE</h1>
             <img src="../assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
         </div>
@@ -99,12 +98,132 @@
         <div class="principal-content">
             <section class="section-principal">
                 <h2 class="titre-section">LA GALLERIE DES MÉDIAS</h2>
-                <div id="liste" class="liste">
-                    <a href="../html/21-22/medias.html" class="link-media-saison"><i class="fas fa-photo-video icone-saison"></i><p class="link-folder">Saison 2021/2022</p></a>
-                    <a href="../html/21-22/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2020/2021</p></a>
-                    <a href="../html/21-22/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2019/2020</p></a>
-                    <a href="../html/21-22/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2018/2019</p></a>
-                    <a href="../html/21-22/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2017/2018</p></a>
+                <div class="liste-media">
+                    <article class="article-saison">
+                        <div class="cadre-img">
+                            <i class="fas fa-photo-video icone-saison"></i>
+                        </div>
+                        <div class="cadre-saison">
+                            <h3 class="titre-saison">SAISON 2021/2022</h3>
+                            <ul class="liste-album">
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ENTRAÎNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">COMPÉTITIONS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">REMISES</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ÉVÈNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">INTER-CLUBS</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="article-saison">
+                        <div class="cadre-img">
+                            <i class="fas fa-photo-video icone-saison"></i>
+                        </div>
+                        <div class="cadre-saison">
+                            <h3 class="titre-saison">SAISON 2020/2021</h3>
+                            <ul class="liste-album">
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ENTRAÎNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">COMPÉTITIONS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">REMISES</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ÉVÈNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">INTER-CLUBS</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="article-saison">
+                        <div class="cadre-img">
+                            <i class="fas fa-photo-video icone-saison"></i>
+                        </div>
+                        <div class="cadre-saison">
+                            <h3 class="titre-saison">SAISON 2019/2020</h3>
+                            <ul class="liste-album">
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ENTRAÎNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">COMPÉTITIONS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">REMISES</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ÉVÈNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">INTER-CLUBS</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="article-saison">
+                        <div class="cadre-img">
+                            <i class="fas fa-photo-video icone-saison"></i>
+                        </div>
+                        <div class="cadre-saison">
+                            <h3 class="titre-saison">SAISON 2018/2019</h3>
+                            <ul class="liste-album">
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ENTRAÎNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">COMPÉTITIONS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">REMISES</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ÉVÈNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">INTER-CLUBS</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="article-saison">
+                        <div class="cadre-img">
+                            <i class="fas fa-photo-video icone-saison"></i>
+                        </div>
+                        <div class="cadre-saison">
+                            <h3 class="titre-saison">SAISON 2017/2018</h3>
+                            <ul class="liste-album">
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ENTRAÎNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">COMPÉTITIONS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">REMISES</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">ÉVÈNEMENTS</a>
+                                </li>
+                                <li class="album">
+                                    <a href="../html/21-22/medias.html" class="link-media-saison">INTER-CLUBS</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
                 </div>
             </section>
         </div>
