--- a/html/reglements.html
+++ b/html/reglements.html
@@ -102,7 +102,7 @@
                 <article id="liste" class="liste">
                     <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">
                         <span class="telecharger">Télécharger le Règlement Intérieur</span> 
-                        <img src="../assets/documents/reglements/logo-découpé.png">
+                        <img src="../assets/documents/reglements/fene-logo.png">
                     </a>
                     <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
                         <span class="telecharger">Télécharger le Code Sportif</span> 
