--- a/index.html
+++ b/index.html
@@ -101,24 +101,7 @@
             <section class="section-principal">
                 <h2 class="titre-section">ACTIVITÉS DU JUDO-CLUB</h2>
                 <div class="activites">
-                    <article class="enfants article">
-                        <a class="lien-equipe">
-                            <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono"
-                                class="img-activite">
-                        </a>
-                        <div class="info-activite">
-                            <h3 class="titre-article">Activités pour les touts-petits</h3>
-                            <p class="description-activite">
-                                Le « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où
-                                les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de
-                                judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le
-                                contact avec les autres enfants du groupe.
-                            </p>
-                            <p class="heure-activite">Les mercredis de 17h15 à 18h</p>
-                            <p class="prix"><strong>90€/an</strong> (licence 30€ + cotisations annuelle 60€)</p>
-                            <p class="detail-prix"><i>Possibilité de payé par trimestre</i></p>
-                        </div>
-                    </article>
+                    <div class="cadre-article"></div>
                     <article class="ados article">
                         <a class="lien-equipe">
                             <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono"
