--- a/html/21-22/medias.html
+++ b/html/21-22/medias.html
@@ -103,17 +103,17 @@
                     <h2 class="titre-section">LES MÉDIAS</h2>
                 </div>
                 <div id="liste" class="liste">
-                    <nav id="trieuse">
+                    <div class="trieuse">
                         <button id="nav-button" aria-haspopup="true" tabindex="0" aria-controls="menu2" class="trier">Trier par<i class="fas fa-angle-up chevron visible"></i></button>
                         <ul class="tri-categorie visible" role="menu2" aria-labelledby="nav-button">
-                            <li class="ligne-un" role="none">
-                                <span tabindex="0" role="menuitem" class="tri-popularite tri-categorie">Popularité</span>
+                            <li class="ligne-tri" role="none">
+                                <span tabindex="0" role="menuitem" class="tri-popularite tri-bouton">Popularité</span>
                             </li>
-                            <li class="ligne-deux" role="none">
-                                <span tabindex="0" role="menuitem" class="tri-date tri-categorie">Date</span>
+                            <li class="ligne-tri" role="none">
+                                <span tabindex="0" role="menuitem" class="tri-date tri-bouton">Date</span>
                             </li>
                         </ul>
-                    </nav>
+                    </div>
                     <div class="media-content">
                         <a class="media photo" href="../../assets/img/media/entrainement-2019.jpg">
                             <img data-index="0" src="../../assets/img/media/entrainement-2019.jpg">
