--- a/index.html
+++ b/index.html
@@ -101,12 +101,29 @@
             <section class="section-principal">
                 <h2 class="titre-section">ACTIVITÉS DU JUDO-CLUB</h2>
                 <div class="activites">
-                    <div class="cadre-article"></div>
+                    <article class="enfants article">
+                        <div class="lien-equipe">
+                            <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono"
+                                class="img-activite">
+                        </div>
+                        <div class="info-activite">
+                            <h3 class="titre-article">Activités pour les touts-petits</h3>
+                            <p class="description-activite">
+                                Le « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où
+                                les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de
+                                judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le
+                                contact avec les autres enfants du groupe.
+                            </p>
+                            <p class="heure-activite">Les mercredis de 17h15 à 18h</p>
+                            <p class="prix"><strong>90€/an</strong> (licence 30€ + cotisations annuelle 60€)</p>
+                            <p class="detail-prix"><i>Possibilité de payé par trimestre</i></p>
+                        </div>
+                    </article>
                     <article class="ados article">
-                        <a class="lien-equipe">
+                        <div class="lien-equipe">
                             <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono"
                                 class="img-activite">
-                        </a>
+                        </div>
                         <div class="info-activite">
                             <h3 class="titre-article">Activités pour les 9/14 ans</h3>
                             <p class="description-activite">
@@ -120,10 +137,10 @@
                         </div>
                     </article>
                     <article class="adultes article">
-                        <a class="lien-equipe">
+                        <div class="lien-equipe">
                             <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange"
                                 class="img-activite">
-                        </a>
+                        </div>
                         <div class="info-activite">
                             <h3 class="titre-article">Activités pour ados et adultes</h3>
                             <p class="description-activite">
@@ -137,9 +154,9 @@
                         </div>
                     </article>
                     <article class="senior article">
-                        <a class="lien-equipe">
+                        <div class="lien-equipe">
                             <img src="assets/img/media/senior.jpg" alt="les seniors" class="img-activite">
-                        </a>
+                        </div>
                         <div class="info-activite">
                             <h3 class="titre-article">Activités Atelier Senior</h3>
                             <p class="description-activite">
